# RoosterOil

rooster-logind/: Cargo.toml
rooster-logind/src/: main.rs
rooster-nugget/: Cargo.toml
rooster-nugget/src/: client_op.rs  crypt.rs  lib.rs  msg.rs  net.rs  server_op.rs
rooster-oil/: Cargo.toml
rooster-oil/src/: crypt.rs  lib.rs  msg.rs  net.rs
