[package]
name = "rooster-nugget"
version = "0.1.0"
edition = "2024"
description = "Common network functionality for Rooster Oil"

[dependencies]
aes = "0.8.4"
bytes = "1.10.1"
cfb-mode = "0.8.2"
cipher = "0.4.4"
flate2 = "1.1.5"
thiserror = "2.0.17"
tokio-util = { version = "0.7.16", features = ["codec"] }
