[package]
name = "rooster-nugget"
version = "0.1.0"
edition = "2024"
description = "Common network functionality for Rooster Oil"

[features]
default = ["server"]
client = []

[dependencies]
aes = "0.8.4"
bytes = "1.10.1"
cbc = "0.1.2"
cfg-if = "1.0.4"
cipher = { version = "0.4.4", features = ["block-padding"] }
crc32fast = "1.5.0"
ctr = "0.9.2"
ecb = "0.1.2"
flate2 = "1.1.5"
rand = "0.9.2"
rsa = "0.9.8"
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio-util = { version = "0.7.16", features = ["codec"] }
