[package]
name = "rooster-oil"
version = "0.1.0"
edition = "2024"
description = "Common network functionality for Rooster game server and tools"

[features]
default = ["server"]
server = []

[dependencies]
aes = "0.8.4"
bitflags = "2.10.0"
bytes = "1.11.0"
cbc = "0.1.2"
cfg-if = "1.0.4"
cipher = { version = "0.4.4", features = ["alloc", "block-padding"] }
crc32fast = "1.5.0"
ctr = "0.9.2"
ecb = "0.1.2"
flate2 = "1.1.5"
rand = "0.8" # must reflect rsa's rand version
rc4 = "0.1.0"
rsa = { version = "0.9.8" , features = ["sha2"]}
thiserror = "2.0.17"
tokio-util = { version = "0.7.17", features = ["codec"] }
uuid = "1.19.0"
